examples/negative/type_invariants/apply_non_function.kai
# Negative fixture (#520 / type system): an Int literal is
# applied as if it were a function. Typer must reject with a
# call-shape type mismatch.

fn main() : Int = 1(2)
